--- a/sqlserver-superset/docker-compose.yml
+++ b/sqlserver-superset/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       - 31010:31010
       - 32010:32010
     container_name: dremio
+    environment:
+      - DREMIO_JAVA_SERVER_EXTRA_OPTS=-Dpaths.dist=file:///opt/dremio/data/dist
     networks:
       sqlserver-dremio-superset:
   #SQLServer
