--- a/dremio-kafka-connect/docker-compose.yml
+++ b/dremio-kafka-connect/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -12,6 +13,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:latest
+    container_name: kafka
     depends_on:
       - zookeeper
     ports:
@@ -28,7 +30,10 @@ services:
       - dremio-kafka-connect
 
   kafka-connect:
-    image: confluentinc/cp-kafka-connect:latest
+    build:
+      context: .
+      dockerfile: dockerfile
+    container_name: kafka-connect
     depends_on:
       - kafka
     ports:
@@ -51,6 +56,7 @@ services:
 
   kafka-rest-proxy:
     image: confluentinc/cp-kafka-rest:latest
+    container_name: kafka-rest-proxy
     depends_on:
       - kafka
       - zookeeper
@@ -66,6 +72,7 @@ services:
 
   nessie:
     image: projectnessie/nessie:latest
+    container_name: nessie
     ports:
       - "19120:19120"
     networks:
@@ -73,11 +80,14 @@ services:
 
   dremio:
     image: dremio/dremio-oss
+    container_name: dremio
     ports:
-      - "9047:9047"
+      - 9047:9047
+      - 31010:31010
+      - 32010:32010
+      - 45678:45678
     environment:
-      DREMIO_HOME: '/opt/dremio'
-      SERVICES: coordinator,executor
+      - DREMIO_JAVA_SERVER_EXTRA_OPTS=-Dpaths.dist=file:///opt/dremio/data/dist
     depends_on:
       - nessie
     networks:
