--- a/dremio-kafka-connect/iceberg-connector-config.properties
+++ b/dremio-kafka-connect/iceberg-connector-config.properties
@@ -3,6 +3,9 @@ connector.class=io.tabular.iceberg.connect.IcebergSinkConnector
 tasks.max=2
 topics=events
 iceberg.tables=stream.sales
+errors.tolerance=all
+errors.log.enable=true
+errors.log.include.messages=true
 
 iceberg.catalog.catalog-impl=org.apache.iceberg.nessie.NessieCatalog
 iceberg.catalog.uri=http://nessie:19120/api/v1
