--- a/dremio-kafka-connect/dockerfile
+++ b/dremio-kafka-connect/dockerfile
@@ -11,6 +11,7 @@ COPY ./iceberg-kafka-connect-runtime-0.6.16 /usr/share/java/kafka-connect-iceber
 # (Optional) Add your Kafka Connect configuration files
 COPY ./iceberg-connector-config.json /etc/kafka-connect/config/
 COPY ./iceberg-connector-config.properties /etc/kafka-connect/config/
+COPY ./kafka-connect.properties /etc/kafka-connect/config/
 
 # Set up the environment variables or any additional setup steps
 ENV CONNECT_PLUGIN_PATH="/usr/share/java/kafka-connect-iceberg,/usr/share/java/kafka-connect-jdbc"
@@ -19,4 +20,4 @@ ENV CONNECT_PLUGIN_PATH="/usr/share/java/kafka-connect-iceberg,/usr/share/java/k
 EXPOSE 8083
 
 # Run the Kafka Connect worker
-CMD ["connect-standalone.sh", "/etc/kafka-connect/kafka-connect.properties", "/etc/kafka-connect/iceberg-connector-config.properties"]
+CMD ["/bin/connect-standalone", "/etc/kafka-connect/config/kafka-connect.properties", "/etc/kafka-connect/config/iceberg-connector-config.properties"]
