--- a/dremio-kafka-connect/kafka-connect.properties
+++ b/dremio-kafka-connect/kafka-connect.properties
@@ -1,5 +1,5 @@
 # Kafka Connect basic settings
-bootstrap.servers=kafka:9092
+bootstrap.servers=kafka:29092
 group.id=kafka-connect-group
 
 # Key and value converters
@@ -20,3 +20,6 @@ status.storage.replication.factor=1
 
 # Plugin path
 plugin.path=/usr/share/java
+
+# Storage of Offset files
+offset.storage.file.filename=/tmp/connect.offsets
