update kafka, almost working

--- a/dremio-kafka-connect/iceberg-connector-config.properties
+++ b/dremio-kafka-connect/iceberg-connector-config.properties
@@ -1,12 +1,11 @@
+## Connector Settings
 name=iceberg-sink-connector
 connector.class=io.tabular.iceberg.connect.IcebergSinkConnector
 tasks.max=2
 topics=sales
 iceberg.tables=streaming.sales
-errors.tolerance=all
-errors.log.enable=true
-errors.log.include.messages=true
 
+# Catalog Settings
 iceberg.catalog.catalog-impl=org.apache.iceberg.nessie.NessieCatalog
 iceberg.catalog.uri=http://nessie:19120/api/v2
 iceberg.catalog.ref=main
@@ -17,8 +16,7 @@ iceberg.catalog.client.region=us-east-1
 iceberg.catalog.s3.path-style-access=true
 iceberg.catalog.s3.access-key-id=admin
 iceberg.catalog.s3.secret-access-key=password
+
+## Other Settings
 iceberg.control.commitIntervalMs=1000
-value.converter.schemas.enable=false
-value.converter=org.apache.kafka.connect.json.JsonConverter
-key.converter=org.apache.kafka.connect.storage.StringConverter
-schemas.enable=false
+
