--- a/dremio-kafka-connect/kafka-connect.properties
+++ b/dremio-kafka-connect/kafka-connect.properties
@@ -18,8 +18,14 @@ config.storage.replication.factor=1
 offset.storage.replication.factor=1
 status.storage.replication.factor=1
 
+# Logging
+errors.tolerance=all
+errors.log.enable=true
+errors.log.include.messages=true
+
 # Plugin path
 plugin.path=/usr/share/java
 
 # Storage of Offset files
 offset.storage.file.filename=/tmp/connect.offsets
+schemas.enable=false
