--- a/dremio-kafka-connect/iceberg-connector-config.properties
+++ b/dremio-kafka-connect/iceberg-connector-config.properties
@@ -1,13 +1,13 @@
 ## Connector Settings
 name=iceberg-sink-connector
 connector.class=io.tabular.iceberg.connect.IcebergSinkConnector
-tasks.max=1
+tasks.max=2
 topics=sales
-iceberg.tables=streaming.sales
+iceberg.tables=streaming.salesdata
 
 # Catalog Settings
 iceberg.catalog.catalog-impl=org.apache.iceberg.nessie.NessieCatalog
-iceberg.catalog.uri=http://nessie:19120/api/v2
+iceberg.catalog.uri=http://nessie:19120/api/v1
 iceberg.catalog.ref=main
 iceberg.catalog.warehouse=s3a://warehouse
 iceberg.catalog.s3.endpoint=http://minio:9000
