--- a/dremio-kafka-connect/kafka-connect.properties
+++ b/dremio-kafka-connect/kafka-connect.properties
@@ -3,7 +3,7 @@ bootstrap.servers=kafka:29092
 group.id=kafka-connect-group
 
 # Key and value converters
-key.converter=org.apache.kafka.connect.json.JsonConverter
+key.converter=org.apache.kafka.connect.storage.StringConverter
 value.converter=org.apache.kafka.connect.json.JsonConverter
 key.converter.schemas.enable=false
 value.converter.schemas.enable=false
