--- a/dremio-kafka-connect/dockerfile
+++ b/dremio-kafka-connect/dockerfile
@@ -9,16 +9,15 @@ WORKDIR /usr/share/java
 COPY ./iceberg-kafka-connect-runtime-0.6.16 /usr/share/java/kafka-connect-iceberg/
 
 # For breaking the cache at build time
-RUN echo "hello new york"
+RUN echo "hello new mexico"
 
 # (Optional) Add your Kafka Connect configuration files
 
 COPY ./kafka-connect.properties /etc/kafka-connect/config/
-COPY ./iceberg-connector-config.json /etc/kafka-connect/config/
 COPY ./iceberg-connector-config.properties /etc/kafka-connect/config/
 
 # granular logging for troubleshoot
-COPY ./connect-log4j.properties /etc/kafka/
+# COPY ./connect-log4j.properties /etc/kafka/
 
 # Set up the environment variables or any additional setup steps
 ENV CONNECT_PLUGIN_PATH="/usr/share/java/kafka-connect-iceberg,/usr/share/java/kafka-connect-jdbc"
