--- a/dremio-kafka-connect/iceberg-connector-config.properties
+++ b/dremio-kafka-connect/iceberg-connector-config.properties
@@ -20,3 +20,7 @@ iceberg.catalog.s3.secret-access-key=password
 ## Other Settings
 iceberg.control.commitIntervalMs=1000
 
+# Serialization
+value.converter.schemas.enable=false
+value.converter=org.apache.kafka.connect.json.JsonConverter
+key.converter=org.apache.kafka.connect.storage.StringConverter
