--- a/dremio-kafka-connect/iceberg-connector-config.properties
+++ b/dremio-kafka-connect/iceberg-connector-config.properties
@@ -2,8 +2,8 @@
 name=iceberg-sink-connector
 connector.class=io.tabular.iceberg.connect.IcebergSinkConnector
 tasks.max=2
-topics=sales
-iceberg.tables=streaming.salesdata
+topics=names
+iceberg.tables=names
 
 # Catalog Settings
 iceberg.catalog.catalog-impl=org.apache.iceberg.nessie.NessieCatalog
@@ -18,7 +18,7 @@ iceberg.catalog.s3.access-key-id=admin
 iceberg.catalog.s3.secret-access-key=password
 
 ## Other Settings
-iceberg.control.commitIntervalMs=1000
+iceberg.control.commitIntervalMs=10000
 
 # Serialization
 value.converter.schemas.enable=false
