--- a/dremio-kafka-connect/kafka-connect.properties
+++ b/dremio-kafka-connect/kafka-connect.properties
@@ -1,6 +1,6 @@
 # Kafka Connect basic settings
 bootstrap.servers=kafka:29092
-group.id=kafka-connect-group
+#group.id=kafka-connect-group
 
 # Key and value converters
 key.converter=org.apache.kafka.connect.storage.StringConverter
