--- a/dremio-kafka-connect/dockerfile
+++ b/dremio-kafka-connect/dockerfile
@@ -9,7 +9,7 @@ WORKDIR /usr/share/java
 COPY ./iceberg-kafka-connect-runtime-0.6.16 /usr/share/java/kafka-connect-iceberg/
 
 # For breaking the cache at build time
-RUN echo "hello at"
+RUN echo "hello ac"
 
 # (Optional) Add your Kafka Connect configuration files
 
