--- a/dremio-kafka-connect/iceberg-connector-config.properties
+++ b/dremio-kafka-connect/iceberg-connector-config.properties
@@ -2,13 +2,16 @@
 name=iceberg-sink-connector
 connector.class=io.tabular.iceberg.connect.IcebergSinkConnector
 tasks.max=2
-topics=names
-iceberg.tables=names
+topics=transactions
+iceberg.tables.dynamic-enabled: true
+iceberg.tables.route-field=table
+iceberg.tables.auto-create-enabled=true
 
 # Catalog Settings
 iceberg.catalog.catalog-impl=org.apache.iceberg.nessie.NessieCatalog
 iceberg.catalog.uri=http://nessie:19120/api/v1
 iceberg.catalog.ref=main
+iceberg.catalog.authentication.type=NONE
 iceberg.catalog.warehouse=s3a://warehouse
 iceberg.catalog.s3.endpoint=http://minio:9000
 iceberg.catalog.io-impl=org.apache.iceberg.aws.s3.S3FileIO
@@ -18,7 +21,8 @@ iceberg.catalog.s3.access-key-id=admin
 iceberg.catalog.s3.secret-access-key=password
 
 ## Other Settings
-iceberg.control.commitIntervalMs=10000
+iceberg.control.commitIntervalMs=60000
+
 
 # Serialization
 value.converter.schemas.enable=false
